dark mode fixed

--- a/personal_website/src/components/home.css
+++ b/personal_website/src/components/home.css
@@ -6,7 +6,7 @@
 
 .parent-home {
     position: fixed;
-    top: 2rem;
+    top: 4rem;
     left: 2rem;
     display: flex;
     flex-direction: column;
